# C-plus-plus-Essentials

./: Automate.cpp  ConstKey.cpp  Customer.cpp  Dictionary.cpp  Entrypoint.cpp  Exception.cpp  Gallery.cpp  Has_A.cpp  Inheritance.cpp  README.md  SecondExcept.cpp  Slicing.cpp  Template_addtwo.cpp  Vcontainer.cpp  Vector.cpp  Vector_table.cpp  XUV3XO.cpp  multiInh_scanner.cpp  vectortemplate.cpp
cmaketask/: CMakeLists.txt  source.cpp
cmaketask/stringCalculator/: CMakeLists.txt  Getnegatives.h  StringCalculator.cpp  StringCalculator.h  Utils.cpp  Utils.h
projectcmake/: CMakeLists.txt  source.cpp
projectcmake/calculator/: CMakeLists.txt  mathfunctions.cpp  mathfunctions.h
